re PR middle-end/30835 (ICE with -O2 -ftree-loop-linear)

PR tree-optimization/30835
	* lambda-code.c (can_convert_to_perfect_nest): Check whether
	bb_for_stmt is not NULL before accessing it.

From-SVN: r122866